# Calabash

./: .cnb.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PRIVACY.md  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  config.yml  docs_localization.yml  feature_request.yml  template_contribution.yml
.github/workflows/: impact-metrics.yml  pages.yml  release.yml  sync-cnb.yml  sync.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
app/public/: robots.txt  sitemap.xml
app/scripts/: fetch-kindaichi-portraits.mjs
app/src/: App.tsx  i18n.ts  main.tsx  types.ts
app/src/components/: IllustrationPreviewModal.tsx
app/src/db/: annotations.ts  books.ts  categories.ts  characters.ts  portraits.ts  (+7 more)
app/tests/: setup.ts
docs/: CODE_SIGNING.md  issues-to-create.md  release-process.md
docs/assets/: impact-metrics.json
docs/examples/: book-import-template.calabash.json
docs/plans/: 2026-05-12-foundation.md
scripts/: desktop-crud-smoke.mjs  mirror-github-release-to-cnb.mjs  update-check-live.mjs  update-impact-metrics.mjs  verify-version.mjs  web-smoke.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+102 files in other folders)
