[package]
name = "calabash"
version = "0.2.2"
description = "A spoiler-safe relationship board for detective fiction readers."
authors = ["Guesswhat Studio"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Guesswhat-Studio/Calabash"

[lib]
name = "calabash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.4"
