[package]
name = "calabash"
version = "0.5.6"
description = "A spoiler-safe relationship board for detective fiction readers."
authors = ["Guesswhat Studio"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Guesswhat-Studio/Calabash"

[lib]
name = "calabash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
